samples/_failures_safe/1761201036_d5817d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_07e85dbd.c: In function ‘main’:
./samples/SAFE/__tmp_07e85dbd.c:164:36: error: expected ‘)’ at end of input
  164 |         if (scanf("%d %d %d", &from
      |                  ~                 ^
      |                                    )
./samples/SAFE/__tmp_07e85dbd.c:164:9: error: expected declaration or statement at end of input
  164 |         if (scanf("%d %d %d", &from
      |         ^~
./samples/SAFE/__tmp_07e85dbd.c:164:9: error: expected declaration or statement at end of input
